fix: Stopped unwanted whitespace genration with large multiselect

--- a/src/aux-server/aux-web/aux-projector/FileSearch/FileSearch.css
+++ b/src/aux-server/aux-web/aux-projector/FileSearch/FileSearch.css
@@ -22,6 +22,11 @@
     width: 40px;
 }
 
+label {
+    max-width: 99%;
+    overflow: hidden;
+}
+
 svg {
     width: 30px;
     height: 30px;
